gitignore and content

--- a/Programa/Prog.tex
+++ b/Programa/Prog.tex
@@ -1,18 +1,22 @@
-\documentclass[11pt,letterpaper]{book}
+\documentclass[11pt,letterpaper]{article}
 \usepackage{samstyle}
 
-\author{
-	Sergio Andres Monsalve Castañeda\\
-	smonsalve@gmail.com\\
-	monsalve.xyz
-}
+
 
 \title{
-	\textbf{
-		\textit{
-			\large{Sergio Andrés Monsalve Castañeda}\\[2cm]
-		}
-	}
+	ASIGNATURA\\
+	PROGRAMACIÓN DE COMPUTADORES\\
+	CODIGO ST0240\\[2cm]
+	SEMESTRE 2016-1\\
+	48 horas semestral\\
+	ESCUELA DE INGENIERIA\\[1cm]
+	Departamento de Informática Y Sistemas
+}
+
+\author{
+	Profesor\\
+	Sergio Andres Monsalve Castañeda\\
+	smonsal3@eafit.edu.co
 }
 
 \begin{document}
@@ -35,8 +39,9 @@
 \end{minipage}
 \cite{Melo2009}
 
-\include{crono}
-
+\include{cont/intro}
+\include{cont/crono}
+\include{cont/evaluacion}
 
 \newpage
 
