--- a/Programa/cont/evaluacion.tex
+++ b/Programa/cont/evaluacion.tex
@@ -1,17 +1,21 @@
-EVALUACIÓN
+\section{EVALUACIÓN}
 
-Seguimiento 10%
-
-Parcial 1 (15%)
-
-Parcial 2 (15%)
-
-Práctica 1(15%)
-
-Práctica 2 (15%)
-
-Practica final (20%)
-
-
+\begin{tabular}{|c|c|c|}
+\hline
+Actividad 			& Porcentaje	& Fecha \\
+\hline
+Parcial 1 			& 	15\%	  	&  	2016/03/04 	\\
+\hline
+Parcial 2 			& 	15\%	  	&  	2016/04/15  \\
+\hline
+Práctica 1			& 	15\%	  	&  	2016/03/25 	\\
+\hline	
+Práctica 2 			& 	15\%	  	&  	2016/05/06	\\
+\hline	
+Seguimiento 		& 	10\%	  	&  	2016/05/13 	\\
+\hline
+Practica final 		& 	20\%	  	& 	2016/06/03  \\
+\hline
+\end{tabular}
 
 
