--- a/Programa/Prog.tex
+++ b/Programa/Prog.tex
@@ -37,15 +37,15 @@
 \begin{minipage}{3cm}
 %\includegraphics[width=15cm]{aux/SamCanny.jpg}
 \end{minipage}
-\cite{Melo2009}
 
 \include{cont/intro}
 \include{cont/crono}
+%\include{cont/contenido}
 \include{cont/evaluacion}
 
-\newpage
+% \newpage
 
-\newpage
+% \newpage
 \bibliographystyle{plainnat}
 \bibliography{Refs}
 
