--- a/Programa/cont/contenido.tex
+++ b/Programa/cont/contenido.tex
@@ -1,171 +1,190 @@
-Elementos de un computador
-Hardware y software
-Interacción con la máquina
-Lenguaje de programación
-Compilador / interpretador
-Lenguaje
-Algoritmo
-Ejemplos de la vida real
-Definición
-Características
-Preciso
-Finito
-Definido
-Definición de programa
-Programa fuente
-Programa objeto
-Paradigmas de programación
-Programación libre
-Programación estructurada
-Programación orientada a objetos
-Otros paradigmas de programación
-Características de los programas
-Modularidad
-Estructuración
-Portabilidad
-Legibilidad
-Eficiencia
-Modificabilidad
-Estructura secuencia
-Clasificación de las instrucciones
-De entrada / salida
-Declaraciones
-De asignación
-Estructuras de control
-Estructura repetitiva
-Estructura de decisión lógica
-Desarrollo de un ejemplo completo
-Herramientas de programación
-Identificadores
-Variables
-Constantes
-Sentencias
-Expresiones
-Tipos de expresiones
-Orden de evaluación de los operadores
-Operadores
-De relación
-Lógicos
-Aritméticos
-Los datos
-Arreglos multidimensionales
-Otras estructuras
-Estructuras de datos
-Simples
-Compuestas
-Tipos
-Arreglos lineales
-Estructura general de un programa
-Partes constitutivas de un programa
-Salida
-Entrada
-Proceso
-Ciclo de vida de un programa
-Verificación y prueba
-Diseño
-Puesta en marcha
-Implementación
-Análisis
-Mantenimiento
-Programación modular
-Variables locales y globales
-Diseño descendente: subprogramas
-Transferencia de información: parámetros
-Diseño modular
-Procedimientos y funciones
-Salvar, cargar y copiar
-Otros tipos de datos en Matlab
-Hipermatrices
-Estructuras
-Cadenas
-Vectores o matrices de celda
-Matrices dispersas
-Programación de Matlab
-Llamado a funciones externas
-Funciones de función
-Referencia de función
-Entrada y salida interactivas
-Entrada y salida
-Bifurcaciones y bucles
-Gráficos tridimensiuonales
-Archivos .m
-El programa Matlab
-Operaciones con matrices y vectores
-El entorno de trabajo de Matlab
-Comentarios
-Gráficos bidimensionales
-Formatos de salida y otras opciones Matlab
-Funciones de librería
-Uso de Help
-El entorno de Visual Basic
-Estructuras condicionales If..Else
-If anidadas
-Operadores lógicos
-La función MsgBox
-Detección de errores y depuración de programas
-Ejecución paso a paso
-Herramientas de depuración
-Modo interrupción
-Expresiones de revisión
-Inspección de variables
-La ventana Inmediato
-Solución de errores
-La instrucción Debug.Print
-Errores de ejecución
-Definición de errores propios
-Rutinas de tratamiento de errores
-Controles de formulario en la hoja de cálculo
-Cuadros combinados
-Casillas de verificación
-Control numérico
-Propiedades de los objetosBotones de opción
-La grabadora de macros
-Tipos de datos en VBA
-Funciones de conversión
-Conversión de tipos de datos
-Funciones de comprobación
-Introducción a las fórmulas
-Macros en Excel
-Objetos, propiedades y métodos
-POO
-Definición
-Conjuntos
-Objetos de objetos
-Objeto Cells
-Creación de formularios y programación
-Editor de Visual Basic
-Preparar un nuevo archivo
-Insertar un procedimiento
-Insertar un nuevo módulo
-Las funciones RGB, InputBox
-Ejecutar un procedimiento o función
-La sentencia Option Explicit
-Valor Nothing
-Estructura Select Case
-Instrucción With
-El entorno Excel
-Configuración de una hoja de cálculo
-Presentación de los datos
-Estructuras iterativas
-Propiedades ROW y COLUMN
-Estructura repetitiva Do While..Loop
-Estructura repetitiva While..Wend
-Estructura repetitiva DoLoop Until
-Instrucción iterativa For
-Propiedad Offset
-Estructura repetitiva DoLoop While
-Estructura For Each
-Procedimientos y funciones
-Llamado de un procedimiento
-Generalización de una función
-Parámetros
-Variables locales y globales
-Pasos por referencia y por valor
-Definición de in procedimiento
-Funciones
-Cláusula Private
-Definición
-Importar y exportar módulos
-Insertar funciones de Microsoft Excel desde Visual Basic
-Realización de una síntesis de cada uno de los temas tratados
-Evaluación de lo aprendido y obtención de conclusiones
+\begin{itemize}
+	\item Elementos de un computador
+	\begin{itemize}
+		\item Hardware y software
+		\item Interacción con la máquina
+	\end{itemize}
+	\item Lenguaje de programación
+	\begin{itemize}
+		\item Compilador / interpretador
+		\item Lenguaje
+		\end{itemize}
+		\begin{itemize}
+			\item Algoritmo
+			\item Ejemplos de la vida real
+			\item Definición
+			\item Características
+		\end{itemize}
+		\begin{itemize}
+			\item Preciso
+			\item Finito
+			\item Definido
+		\end{itemize}
+\item Definición de programa
+\item Programa fuente
+\item Programa objeto
+\item Paradigmas de programación
+	\begin{itemize}
+	\item Programación libre
+	\item Programación estructurada
+	\item Programación orientada a objetos
+	\item Otros paradigmas de programación
+	\end{itemize}
+\item Características de los programas
+		\begin{itemize}
+			\item Modularidad
+			\item Estructuración
+			\item Portabilidad
+			\item Legibilidad
+			\item Eficiencia
+			\item Modificabilidad
+		\end{itemize}
+\item Estructura secuencia
+\item Clasificación de las instrucciones
+		\begin{itemize}
+			\item De entrada / salida
+			\item Declaraciones
+			\item De asignación
+		\end{itemize}
+\item Estructuras de control
+	\begin{itemize}
+	\item Estructura repetitiva
+	\item Estructura de decisión 
+	\end{itemize}
+\item Desarrollo de un ejemplo completo
+\item Herramientas de programación
+\item Identificadores
+\item Variables
+\item Constantes
+\item Sentencias
+\item Expresiones
+\item Tipos de expresiones
+\item Orden de evaluación de los operadores
+\item Operadores
+\item De relación
+\item Lógicos
+\item Aritméticos
+\item Los datos
+\item Arreglos multidimensionales
+\item Otras estructuras
+\item Estructuras de datos
+\item Simples
+\item Compuestas
+\item Tipos
+\item Arreglos lineales
+\item Estructura general de un programa
+\item Partes constitutivas de un programa
+\item Salida
+\item Entrada
+\item Proceso
+\item Ciclo de vida de un programa
+\item Verificación y prueba
+\item Diseño
+\item Puesta en marcha
+\item Implementación
+\item Análisis
+\item Mantenimiento
+\item Programación modular
+\item Variables locales y globales
+\item Diseño descendente: subprogramas
+\item Transferencia de información: parámetros
+\item Diseño modular
+\item Procedimientos y funciones
+\item Salvar, cargar y copiar
+\item Otros tipos de datos en Matlab
+\item Hipermatrices
+\item Estructuras
+\item Cadenas
+\item Vectores o matrices de celda
+\item Matrices dispersas
+\item Programación de Matlab
+\item Llamado a funciones externas
+\item Funciones de función
+\item Referencia de función
+\item Entrada y salida interactivas
+\item Entrada y salida
+\item Bifurcaciones y bucles
+\item Gráficos tridimensiuonales
+\item Archivos .m
+\item El programa Matlab
+\item Operaciones con matrices y vectores
+\item El entorno de trabajo de Matlab
+\item Comentarios
+\item Gráficos bidimensionales
+\item Formatos de salida y otras opciones Matlab
+\item Funciones de librería
+\item Uso de Help
+\item El entorno de Visual Basic
+\item Estructuras condicionales If..Else
+\item If anidadas
+\item Operadores lógicos
+\item La función MsgBox
+\item Detección de errores y depuración de programas
+\item Ejecución paso a paso
+\item Herramientas de depuración
+\item Modo interrupción
+\item Expresiones de revisión
+\item Inspección de variables
+\item La ventana Inmediato
+\item Solución de errores
+\item La instrucción Debug.Print
+\item Errores de ejecución
+\item Definición de errores propios
+\item Rutinas de tratamiento de errores
+\item Controles de formulario en la hoja de cálculo
+\item Cuadros combinados
+\item Casillas de verificación
+\item Control numérico
+\item Propiedades de los objetosBotones de opción
+\item La grabadora de macros
+\item Tipos de datos en VBA
+\item Funciones de conversión
+\item Conversión de tipos de datos
+\item Funciones de comprobación
+\item Introducción a las fórmulas
+\item Macros en Excel
+\item Objetos, propiedades y métodos
+\item POO
+\item Definición
+\item Conjuntos
+\item Objetos de objetos
+\item Objeto Cells
+\item Creación de formularios y programación
+\item Editor de Visual Basic
+\item Preparar un nuevo archivo
+\item Insertar un procedimiento
+\item Insertar un nuevo módulo
+\item Las funciones RGB, InputBox
+\item Ejecutar un procedimiento o función
+\item La sentencia Option Explicit
+\item Valor Nothing
+\item Estructura Select Case
+\item Instrucción With
+\item El entorno Excel
+\item Configuración de una hoja de cálculo
+\item Presentación de los datos
+\item Estructuras iterativas
+\item Propiedades ROW y COLUMN
+\item Estructura repetitiva Do While..Loop
+\item Estructura repetitiva While..Wend
+\item Estructura repetitiva DoLoop Until
+\item Instrucción iterativa For
+\item Propiedad Offset
+\item Estructura repetitiva DoLoop While
+\item Estructura For Each
+\item Procedimientos y funciones
+\item Llamado de un procedimiento
+\item Generalización de una función
+\item Parámetros
+\item Variables locales y globales
+\item Pasos por referencia y por valor
+\item Definición de in procedimiento
+\item Funciones
+\item Cláusula Private
+\item Definición
+\item Importar y exportar módulos
+\item Insertar funciones de Microsoft Excel desde Visual Basic
+\item Realización de una síntesis de cada uno de los temas tratados
+\item Evaluación de lo aprendido y obtención de conclusiones
+
+\end{itemize}
