--- a/Programa/cont/intro.tex
+++ b/Programa/cont/intro.tex
@@ -19,3 +19,5 @@ Al finalizar este curso, el estudiante:
 
 	\item Comprenderá que no saber programar un computador, implica una merma, en un gran porcentaje, del producto del trabajo realizado con el mismo, a pesar del software tan desarrollado existente en el mercado
 \end{itemize}
+
+Texto Guia \cite{farrell2011programming}
