grep=grep --color

--- a/4.Talleres/2Taller/samstyle.sty
+++ b/4.Talleres/2Taller/samstyle.sty
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 %\usepackage{a4wide}
 \usepackage{multirow} 
+\usepackage{listings}
 \usepackage{framed}
 \usepackage{float}
 \usepackage{times}
