--- a/5.Practicas/2Practica/2practica.tex
+++ b/5.Practicas/2Practica/2practica.tex
@@ -45,23 +45,76 @@ Profesor: \underbar{\hspace{1cm} Sergio Monsalve
 Marzo \underbar{\hspace{1cm}} de 2016 \rule{18cm}{1.5pt}
 %%% Fin del encabezado
 
+La siguiente es la descripción de la Practica 2 del curso de Programación de computadores, esta debe ser entregada máximo el día domingo 15 de Mayo a las 11:59pm a través de la plataforma de EAFIT Interactiva.\\
 
-La siguiente es la descripción de la Practica 2 del curso de Programación de computadores.
+Suponga que usted es el profesor(a) de una Materia universitara, tal materia tiene \emph{N} cantidad de actividades evaluativas, que se encuentran indexadas en un archivo dado (\emph{indice.txt}).
 
-Dia de entrega Enunciado: 29 de Abril.\\
-Dia de entraga Practica: máximo el día domingo 13 de Mayo a las 11:59pm a través de la plataforma de EAFIT Interactiva.\\
+\section*{Entrada}
+
+Como entradas usted tiene un archivo <<\emph{indice.txt}>> que contiene la cantidad de archivos, la cantidad de estudiantes, el nombre de cada archivo, la cantidad de estudiantes que presetaron esa actividad evaluativa, que estudiantes no presentaron tal evaluación, la cantidad de puntos que tenia cada actividad y los porcentajes de cada punto. Un archivo por cada evaluación donde esta el identificador de cada estudiante (entero $ m \geq 0$ ) y las notas por cada punto. 
+
+\section*{Salida}
+
+Se requiere que usted elabore un programa que cumpla con los siguientes requisitos: 
+
+\vspace{1cm}
+
+\begin{enumerate}
+\item \textbf{(Valor 25\%)} Manipulación datos:
+\end{enumerate}
+
+\begin{itemize}
+  \item Realizar un arreglo con las notas de cada uno de los estudiantes
+  \item Realizar un arreglo por estudiante con las notas de cada evaluación
+\end{itemize}
+ \vspace{0.5cm}
+
+\begin{enumerate}[resume] 
+\item \textbf{(Valor 25\%)}Procesamiento
+\end{enumerate}
+
+\begin{itemize}
+  \item Encuentre el Promedio de las notas de cada estudiante.
+  \item Encuentre la desviación típica para cada estudiante.
+  \item Encuentre la Nota promedio para cada evaluación
+  \item Encuentre la desviación típica por evaluación.
+\end{itemize}
+\vspace{0.5cm}
+
+\begin{enumerate}[resume]
+\item \textbf{(Valor 25\%)} Manejo de bibliotecas: Matplotlib
+\end{enumerate}
 
 
-Archivo de Entrada procesamiento de imagenes
-Procesamiento de imagenes con matlab
-procesamientod e imagenes en paralelo
+\begin{itemize}
+  \item Graficar el Progreso del Estudiante Dado (notas de las evaluaciones)
+  \item Graficar el progreso de todos los estudiantes (Gráfica de lineas con linea por cada estudiante)
+\end{itemize}
+\vspace{0.5cm}
+
+\begin{enumerate}[resume]
+\item \textbf{(Valor 25\%)} Interpretación y Reportes
+\end{enumerate}
 
 
+\begin{itemize}
+  \item Determinar cuáles estudiantes han mejorado su rendimiento y mostrarlo mediante una gráfica (solo estudiantes que siempre mejoraron su nota)
+\end{itemize}
 
 
 \section{Apéndice}
+
+\subsection{Indice.txt} % (fold)
+\label{sub:indice_txt}
+
+% subsection indice_txt (end)
+%\lstinputlisting{Indice.txt}
+
 \newpage
 
-ArchivoDeEntrada.txt
+\subsection{Parcial1.txt} % (fold)
+\label{sub:parcial1_txt}
 
+%\lstinputlisting{Solucion/Parcial2.txt}
+% subsection parcial1_txt (end)
 \end{document}
