--- a/5.Practicas/2Practica/2practica.tex
+++ b/5.Practicas/2Practica/2practica.tex
@@ -42,7 +42,7 @@
 
 Profesor: \underbar{\hspace{1cm} Sergio Monsalve
 \hspace{3.1cm}} \; \hfill Grupo: \underbar{\hspace{1cm} 063 } \;
-Marzo \underbar{\hspace{1cm}} de 2016 \rule{18cm}{1.5pt}
+Mayo \underbar{\hspace{1cm}} de 2016 \rule{18cm}{1.5pt}
 %%% Fin del encabezado
 
 La siguiente es la descripción de la Practica 2 del curso de Programación de computadores, esta debe ser entregada máximo el día domingo 15 de Mayo a las 11:59pm a través de la plataforma de EAFIT Interactiva.\\
@@ -51,19 +51,50 @@ Suponga que usted es el profesor(a) de una Materia universitara, tal materia tie
 
 \section*{Entrada}
 
-Como entradas usted tiene un archivo <<\emph{indice.txt}>> que contiene la cantidad de archivos, la cantidad de estudiantes, el nombre de cada archivo, la cantidad de estudiantes que presetaron esa actividad evaluativa, que estudiantes no presentaron tal evaluación, la cantidad de puntos que tenia cada actividad y los porcentajes de cada punto. Un archivo por cada evaluación donde esta el identificador de cada estudiante (entero $ m \geq 0$ ) y las notas por cada punto. 
+Como entradas usted tiene un archivo <<\emph{indice.txt}>> que contiene:
+ 
+\begin{itemize}
+
+\item  la cantidad de archivos
+\item  la cantidad de estudiantes
+\end{itemize}
+
+ N veces (1 por cada archivo):
+
+\begin{itemize}
+\item El nombre de cada archivo
+\item Porcentaje actividad evaluativa
+\item La cantidad de estudiantes que presetaron esa actividad evaluativa
+\item Que estudiantes no presentaron tal evaluación
+\item La cantidad de puntos que tenia cada actividad y los porcentajes de cada punto. 
+\end{itemize}
+
+\vdots
+
+Adicionalmente, un archivo por cada evaluación donde esta el identificador de cada estudiante y las notas por cada punto. 
+
+Cantidad de Archivos: N\\
+Estudiantes totales: M\\[0.5cm]
+
+Parcial1.csv\\
+Porcentaje de la evaluacion: [valor entre 1 y 100]\\
+Presentaron: $valor \leq N$\\
+Total Puntos: P\\
+Estudiantes que no presentaron: [$valor \leq N$]\\
+porcentaje de los puntos: []
+
+\newpage
 
 \section*{Salida}
 
 Se requiere que usted elabore un programa que cumpla con los siguientes requisitos: 
-
-\vspace{1cm}
 
 \begin{enumerate}
 \item \textbf{(Valor 25\%)} Manipulación datos:
 \end{enumerate}
 
 \begin{itemize}
+  \item Leer los archivos a partir del archivo indice, y obtener todos los datos para procesar
   \item Realizar un arreglo con las notas de cada uno de los estudiantes
   \item Realizar un arreglo por estudiante con las notas de cada evaluación
 \end{itemize}
@@ -87,8 +118,8 @@ Se requiere que usted elabore un programa que cumpla con los siguientes requisit
 
 
 \begin{itemize}
-  \item Graficar el Progreso del Estudiante Dado (notas de las evaluaciones)
-  \item Graficar el progreso de todos los estudiantes (Gráfica de lineas con linea por cada estudiante)
+  \item que el programa grafique las notas de cada uno de los estudiantes y los guarde en un archivo con todas las graficas
+  \item Graficar el progreso de todos los estudiantes (Gráfica de lineas con linea por cada estudiante) guardarlo como una imagen aparte
 \end{itemize}
 \vspace{0.5cm}
 
@@ -99,22 +130,7 @@ Se requiere que usted elabore un programa que cumpla con los siguientes requisit
 
 \begin{itemize}
   \item Determinar cuáles estudiantes han mejorado su rendimiento y mostrarlo mediante una gráfica (solo estudiantes que siempre mejoraron su nota)
+  \item Exportar las notas tanto de cada evaluacion como finales en un archivo con formato CSV ordenados de mejor a peor nota final. 
 \end{itemize}
 
-
-\section{Apéndice}
-
-\subsection{Indice.txt} % (fold)
-\label{sub:indice_txt}
-
-% subsection indice_txt (end)
-%\lstinputlisting{Indice.txt}
-
-\newpage
-
-\subsection{Parcial1.txt} % (fold)
-\label{sub:parcial1_txt}
-
-%\lstinputlisting{Solucion/Parcial2.txt}
-% subsection parcial1_txt (end)
 \end{document}
