grep=grep --color

--- a/5.Practicas/2Practica/2practica.tex
+++ b/5.Practicas/2Practica/2practica.tex
@@ -77,11 +77,11 @@ Cantidad de Archivos: N\\
 Estudiantes totales: M\\[0.5cm]
 
 Parcial1.csv\\
-Porcentaje de la evaluacion: [valor entre 1 y 100]\\
-Presentaron: $valor \leq N$\\
-Total Puntos: P\\
-Estudiantes que no presentaron: [$valor \leq N$]\\
-porcentaje de los puntos: []
+Porcentaje de la evaluacion: [$valor$ $entre$ $1$ y $100$]\\
+Presentaron: $v$ $estudiantes$, donde $v \leq M$\\
+Total Puntos: $P$\\
+Estudiantes que no presentaron: [$valor \leq M$]\\
+porcentaje de los puntos: [$P_1, P_2,...,P_N$]
 
 \newpage
 
@@ -113,12 +113,12 @@ Se requiere que usted elabore un programa que cumpla con los siguientes requisit
 \vspace{0.5cm}
 
 \begin{enumerate}[resume]
-\item \textbf{(Valor 25\%)} Manejo de bibliotecas: Matplotlib
+\item \textbf{(Valor 25\%)} Visualización
 \end{enumerate}
 
 
 \begin{itemize}
-  \item que el programa grafique las notas de cada uno de los estudiantes y los guarde en un archivo con todas las graficas
+  \item Que el programa grafique las notas de cada uno de los estudiantes y los guarde en un archivo con todas las graficas
   \item Graficar el progreso de todos los estudiantes (Gráfica de lineas con linea por cada estudiante) guardarlo como una imagen aparte
 \end{itemize}
 \vspace{0.5cm}
